@@ -1,3 +1,13 @@
 #!/bin/sh
 
-./test-shell < test.cmds | diff -a -u - test.output
+#    This is what we used to do, needs a little work
+# to be save and avoid the libefs mess.
+#
+# ./test-shell < test.cmds | diff -a -u - test.output
+
+if ./test-async $SRCDIR/test.input; then
+    echo "Test passed"
+else
+    echo "Test failed"
+    exit 1
+fi
