@@ -1,3 +1,13 @@
+2002-07-17  Michael Meeks  <michael@ximian.com>
+
+	* test/auto-test: re-write.
+
+	* test/Makefile.am: connect auto-test, upd env.
+
+	* test/test-async-cancel.c
+	(MAX_THREAD_WAIT): bump the thread wait for my poor
+	old machine.
+
 2002-07-16  Michael Meeks  <michael@ximian.com>
 
 	* libgnomevfs/gnome-vfs-async-job-map.c:
